# data-forge

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  color.rs  convert.rs  count.rs  filter.rs  headtail.rs  main.rs  output.rs  sample.rs  schema.rs  sort.rs  stats.rs  types.rs
