[package]
name = "data-forge"
version = "0.1.0"
edition = "2021"
description = "High-performance data processing CLI optimized for AMD Ryzen AI 9 HX 370"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
rayon = "1"
indicatif = "0.17"
comfy-table = "7"
rand = "0.8"
anyhow = "1"
bytecount = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
# target-cpu set via RUSTFLAGS="-C target-cpu=native" at build time
